--- a/CqrsExample/appsettings.json
+++ b/CqrsExample/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WeatherDb": "Host=db-postgress;Username=admin;Password=admin;Persist Security Info=True;Database=sqrs_example"
+  },
   "AllowedHosts": "*"
 }
