--- a/CqrsExample/CqrsExample.csproj
+++ b/CqrsExample/CqrsExample.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Controllers\Controllers.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\WeatherRepository\WeatherRepository.csproj" />
   </ItemGroup>
 
 </Project>
