--- a/CqrsExample/CqrsExample.csproj
+++ b/CqrsExample/CqrsExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Controllers\Controllers.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\ReadonlyWeatherRepository\ReadonlyWeatherRepository.csproj" />
     <ProjectReference Include="..\WeatherRepository\WeatherRepository.csproj" />
   </ItemGroup>
 
